<?xml version="1.0"?>
<package>
	<name>fh_segmentation</name>
	<version>0.0.0</version>
	<description>OpenCV (and possibly PCL) wrapper for FH graph-cut segmentation</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag --> 
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="arprice@gatech.edu">Andrew Price</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>BSD</license>


	<!-- Author tags are optional, mutiple are allowed, one per tag -->
	<!-- Authors do not have to be maintianers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>roslib</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>roslib</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
	</export>
</package>
